--- a/CurveDemo4AVA.html
+++ b/CurveDemo4AVA.html
@@ -1,1 +1,2 @@
 <b>Hallo bold</b> nonbold.
+<iframe src="http://193.200.45.38:8080/#/notebook/2D92AT9W1/paragraph/20180226-152743_1341966081?asIframe" scrolling="no" style="border:none;" height="450px" width="100%"></iframe>
